# rabbitmq-amqp-python-client

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  create_tag.sh  pyproject.toml  setup.cfg
.ci/certs/: ca.p12  client.p12  client_certificate.pem  client_localhost.p12  client_localhost_certificate.pem  server.p12  server_certificate.pem  server_localhost.p12  server_localhost_certificate.pem
.ci/conf/: rabbitmq.conf
.ci/ubuntu/: gha-log-check.sh  gha-setup.sh  rabbitmq.conf
.github/workflows/: build-test.yaml  publish-pypi.yaml  publish_release.yaml
examples/: README.md
examples/direct_reply_queue/: direct_reply_to.py
examples/getting_started/: Makefile  basic-example.py  basic_example.py  example_with_streams.py  getting_started.py  getting_started_async.py  main.py  reconnection_example.py  requirements.txt  tls_example.py
examples/oauth/: oAuth2.py  oAuth2_async.py  (+1 more)
rabbitmq_amqp_python_client/: __init__.py  address_helper.py  amqp_connection.py  amqp_consumer_handler.py  amqp_message.py  common.py  configuration_options.py  connection.py  consumer.py  converter.py  delivery_consumer_handler.py  delivery_context.py  entities.py  environment.py  exceptions.py  exchange.py  management.py  message_ack.py  options.py  publisher.py  queues.py  ssl_configuration.py  utils.py
tests/: conftest.py  http_requests.py  test_address_helper.py  test_amqp_091.py  test_connection.py  test_consumer.py  test_management.py  test_publisher.py  test_publisher_streams.py  test_server_validation.py  test_settled_consumer.py  test_streams.py  utils.py
(+65 files in other folders)
