[tool.poetry]
name = "rabbitmq-amqp-python-client"
version = "0.1.0-alpha.1"
description = "Python RabbitMQ client for AMQP 1.0 protocol"
authors = ["RabbitMQ team"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-qpid-proton = "^0.39.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^7.4.0"
black = "^24.3.0"
python-qpid-proton = "^0.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
